refactor: remove Dagger, Guava, and Checker Framework dependencies
Replace Dagger DI with manual 3-level factory wiring (DatabaseManagerFactory),
replace Guava utilities with lightweight io.sirix.utils.* replacements
(Preconditions, ForwardingObject, ComparisonChain, Iterators, ToStringHelper,
AbstractComputingIterator, GapList, ObjectPool), and switch Checker Framework
nullness annotations to JSpecify (@Nullable kept, @NonNull/@NonNegative removed).

- Delete 18 Dagger module/component/scope files
- Replace FluentIterable usage with Java streams in tests
- Replace repackaged StopWatch with System.nanoTime()
- Add JSpecify 1.0.0 as lightweight replacement for checker-qual
- Net reduction: ~2200 lines deleted, 3 heavy dependencies removed